Added new method and minor changes

--- a/ProyectoRazor/Views/Home/DetalleEquipo.cshtml
+++ b/ProyectoRazor/Views/Home/DetalleEquipo.cshtml
@@ -10,21 +10,11 @@
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Dorsal)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Apellido)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Titulos)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Debut)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.Dorsal)</th>
+        <th>@Html.DisplayNameFor(model => model.Nombre)</th>
+        <th>@Html.DisplayNameFor(model => model.Apellido)</th>
+        <th>@Html.DisplayNameFor(model => model.Titulos)</th>
+        <th>@Html.DisplayNameFor(model => model.Debut)</th>
         <th></th>
     </tr>
 
@@ -50,5 +40,4 @@
         </td>
     </tr>
 }
-
 </table>
