--- a/ProyectoRazor/Views/Home/DetallePiloto.cshtml
+++ b/ProyectoRazor/Views/Home/DetallePiloto.cshtml
@@ -1,5 +1,4 @@
 ﻿@model ProyectoRazor.Models.Piloto
-
 @{
     ViewBag.Title = "DetallePiloto";
 }
@@ -10,64 +9,29 @@
     <h4>@Html.DisplayFor(model => model.Dorsal) @Html.DisplayFor(model => model.Nombre) @Html.DisplayFor(model => model.Apellido) </h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Dorsal)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.Dorsal)</dt>
+        <dd>@Html.DisplayFor(model => model.Dorsal)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Dorsal)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.Nombre)</dt>
+        <dd>@Html.DisplayFor(model => model.Nombre)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Equipo)
-        </dt>
-
-        <dd>
-            @ViewBag.Equipo
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria)
-        </dt>
-
-        <dd>
-            @ViewBag.Categoria
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Titulos)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Titulos)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Debut)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Debut)
-        </dd>
-
+        <dt>@Html.DisplayNameFor(model => model.Apellido)</dt>
+        <dd>@Html.DisplayFor(model => model.Apellido)</dd>
+        
+        <dt>@Html.DisplayNameFor(model => model.Equipo)</dt>
+        <dd>@ViewBag.Equipo</dd>
+        
+        <dt>@Html.DisplayNameFor(model => model.Categoria)</dt>
+        <dd>@ViewBag.Categoria</dd>
+        
+        <dt>@Html.DisplayNameFor(model => model.Titulos)</dt>
+        <dd>@Html.DisplayFor(model => model.Titulos)</dd>
+        
+        <dt>@Html.DisplayNameFor(model => model.Debut)</dt>
+        <dd>@Html.DisplayFor(model => model.Debut)</dd>
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Volver", "DetalleEquipo", new { idequipo = Model.Equipo })
+    @Html.ActionLink("Volver", "DetalleEquipo", new { idequipo = Model.Equipo }) |
+    @Html.ActionLink("¿Eliminar?", "EliminarPiloto", new { idpiloto = Model.IdPiloto })
 </p>
