--- a/ProyectoRazor/Views/Home/Index.cshtml
+++ b/ProyectoRazor/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Index";
 }
-<h2>Lista de pilotos</h2>
+<h2>Lista de pilotos de la temporada @DateTime.Now.Year</h2>
 <table class="table">
     <tr>
         <th>
@@ -20,6 +20,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Debut)
         </th>
+        <th></th>
     </tr>
 @foreach (var item in Model) {
     <tr>
@@ -37,6 +38,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Debut)
+        </td>
+        <td>
+            @Html.ActionLink("Detalles", "DetallePiloto", new { idpiloto = item.IdPiloto})
         </td>
     </tr>
 }
